V0.0.13 various css changes. Added orange bar, fixed text padding issue, added header/footer texture, background stretches to 100% width

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
 
 body{
     background: url(oldmap.jpg);
+    background-repeat: repeat-y;
+    background-size: 100% auto;
     height: 100%;
     min-width: 1280px;
 }
@@ -51,13 +53,17 @@ a, a:hover, a:visited{
   text-align: center;
 }
 #header{
-  background-color: rgb(0,0,80);
+  background-image: url(topBar.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   padding: 2em;
   position: relative;
   width: 100%;
 }
 #Top{	
-  background-color: rgb(80,80,80);
+  background-image: url(topBar.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   border-bottom: .2em solid black;
   width: 100%;
   height: 10em;
@@ -100,7 +106,7 @@ a, a:hover, a:visited{
   background-color: rgba(80,0,0,.6);
 }
 .colororange{
-  background: url(timelineTextureYellow.jpg);
+  background: url(timelineTextureOrange.jpg);
   background-size: 2em;
   background-repeat: repeat-y;
   background-position: 50% 0;
@@ -176,6 +182,8 @@ a, a:hover, a:visited{
   background-color: rgba(0, 0, 0, 0);
   color: white;
   float: left;
+  margin: 2%;
+  margin-right: 0;
   width: 60%;
 }
 .event h1{
@@ -216,20 +224,16 @@ a, a:hover, a:visited{
 .colorpurple .event:hover{
   background: rgba(0,100,200,.2);
 }
-.event a{
-  border: none;
+.event a, .event a:hover, .event a:visited{
   padding: 0;
+  border: none;
   display: auto;
   color: white;
 }
-.event a:hover, .event a:visited{
-  padding: 0;
-  border: none;
-  display: auto;
-  color: red;
-}
 #footer{
-  background: rgb(80,80,80);
+  background-image: url(topBar.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   padding: 2em;
   position: relative;
   width: 100%;
