--- a/css/timelineHalf.css
+++ b/css/timelineHalf.css
@@ -16,9 +16,6 @@
   padding-right: 5%;
   height: 26em;
 }
-.half .event .Text{
-  min-height: 15em;
-}
 .half .event img{
   margin: 0em 0em 1.5em 0px;
   max-width: 6em;
