--- a/css/timelineThird.css
+++ b/css/timelineThird.css
@@ -24,9 +24,6 @@
   padding-right: 5%;
   height: 26em;
 }
-.third .event .Text{
-  min-height: 15em;
-}
 .third .event img{
   margin: 0em 0em 1.5em 0px;
   max-width: 4em;
