--- a/css/timelineWhole.css
+++ b/css/timelineWhole.css
@@ -11,7 +11,6 @@
 .whole .event .Text{
   font-size: 14pt;
   width: 70%;
-  min-height: 15em;
 }
 .whole .event img{
   margin: 0px 3em 3em 0px;
